--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,16 @@ spring.application.name=customer-service
 
 server.port=0
 
+# 啟用錯誤響應中的 message 訊息(生產環境避免資訊洩漏，不建議使用)
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# 生產環境避免資訊洩漏，不建議使用
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.configprops.show-values=always
+management.endpoint.env.show-values=always
+# 確保 Info 端點顯示所有 info.* 屬性，這是 Spring Boot 3.x 的行為，在 Spring Boot 2.x 中不需要這個設定
+management.info.env.enabled=true
 
 spring.cloud.zookeeper.connect-string=localhost:2181
